# Photo-Finder

./: .gitignore  .photo_finder.json.example  LICENSE  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
benchmarks/: benchmark_search.py
photo_finder/: __init__.py  __main__.py  cache.py  engine.py  hasher.py
tests/: test_engine.py
